# elephon

./: .gitignore  README  README.md  elephon.doxyfile
cmake/: Macros.cmake  dependencies.cmake
cmake/Modules/: FindAtlas.cmake  FindFFTW3.cmake  FindLAPACK.cmake  FindLAPACKE.cmake  FindMKL.cmake  FindOpenBLAS.cmake
elephon/: CMakeLists.txt  main.cpp  main.dox
elephon/Algorithms/: CubeSplineInterpolation.h  CubeSplineInterpolation.hpp  FFTInterface.cpp  FFTInterface.h  FFTInterface.hpp  GridRotationMap.cpp  GridRotationMap.h  LinearAlgebraInterface.cpp  LinearAlgebraInterface.h  LinearAlgebraInterface.hpp  LocalDerivatives.h  LocalDerivatives.hpp  SimpsonIntegrator.h  SimpsonIntegrator.hpp  SphereIntegrator.h  SphereIntegrator.hpp  TrilinearInterpolation.cpp  TrilinearInterpolation.h  TrilinearInterpolation.hpp  helperfunctions.hpp  rotation_matrix_connecting_unit_vectors.cpp  rotation_matrix_connecting_unit_vectors.h
elephon/Algorithms/Lebedev_rule_data/: lebedev_003.txt  lebedev_005.txt  lebedev_007.txt  lebedev_009.txt  lebedev_011.txt  lebedev_013.txt  lebedev_015.txt  lebedev_017.txt  lebedev_019.txt  lebedev_021.txt  lebedev_023.txt  lebedev_025.txt  lebedev_027.txt  lebedev_029.txt  lebedev_031.txt  lebedev_035.txt  lebedev_041.txt  lebedev_047.txt  lebedev_053.txt  lebedev_059.txt  lebedev_065.txt  lebedev_071.txt  lebedev_077.txt  lebedev_083.txt  lebedev_089.txt  lebedev_095.txt  lebedev_101.txt  lebedev_107.txt  lebedev_113.txt  lebedev_119.txt  lebedev_125.txt  lebedev_131.txt
elephon/AtomicSite/: ASSymmetry.cpp  ASSymmetry.h  AtomSiteData.cpp  AtomSiteData.h  EulerAngles.cpp  EulerAngles.h  FrozenCore.cpp  FrozenCore.h  FrozenCore.hpp  RadialGrid.cpp  RadialGrid.h  RadialGrid.hpp  SphericalHarmonicExpansion.cpp  SphericalHarmonicExpansion.h  SphericalHarmonicExpansion.hpp  WignerDMatrix.cpp  WignerDMatrix.h
elephon/Auxillary/: AlignedVector.h  CubicPolynomial.h  CubicPolynomial.hpp  FunctionTraits.h  UnitConversion.h  memory_layout_functions.hpp
elephon/ElectronicStructure/: BandOrderAnalysis.cpp  BandOrderAnalysis.h  BandStructureAnalysis.cpp  BandStructureAnalysis.h  ElectronicBands.cpp  ElectronicBands.h  ElectronicBands.hpp  FermiSurface.cpp  FermiSurface.h  GradientFFTReciprocalGrid.cpp  GradientFFTReciprocalGrid.h  LocalDensityOfStates.cpp  LocalDensityOfStates.h  NestingFunction.cpp  NestingFunction.h  TetrahedraIsosurface.cpp  TetrahedraIsosurface.h  Wavefunctions.cpp  Wavefunctions.h
elephon/EliashbergEquations/: EliashbergFindTc.cpp  EliashbergFindTc.h  EliashbergFrequencyRenormalization.cpp  EliashbergFrequencyRenormalization.h  EliashbergGapFunction.cpp  EliashbergGapFunction.h  EliashbergModule.cpp  EliashbergModule.h  EliashbergModuleConstants.cpp  EliashbergModuleConstants.h  EliashbergSingleRun.cpp  EliashbergSingleRun.h  EliashbergSingleRunData.cpp  EliashbergSingleRunData.h  Eliashberg_helperfunction.hpp  IsotropicElectronPhononCoupling.cpp  IsotropicElectronPhononCoupling.h  IsotropicEliashbergEquations.cpp  IsotropicEliashbergEquations.h  MatsubaraBaseBoson.h  MatsubaraBaseFermion.cpp  MatsubaraBaseFermion.h  MazubaraBaseBoson.cpp
elephon/IOMethods/: BuildFolderStructure.cpp  BuildFolderStructure.h  ChooseInterface.cpp  ChooseInterface.h  ElectronicStructureCodeInterface.cpp  ElectronicStructureCodeInterface.h  Input.cpp  Input.h  InputBase.h  InputBase.hpp  InputFile.cpp  InputFile.h  InputOptions.h  KPath.cpp  KPath.h  ReadVASPElephonData.cpp  ReadVASPElephonData.h  ReadVASPKpoints.cpp  ReadVASPKpoints.h  ReadVASPLocpot.cpp  ReadVASPLocpot.h  ReadVASPPoscar.cpp  ReadVASPPoscar.h  ReadVASPPotcar.cpp  ReadVASPPotcar.h  ReadVASPPotential.cpp  ReadVASPPotential.h  ReadVASPPotential.hpp  ReadVASPSymmetries.cpp  ReadVASPSymmetries.h  ReadVASPWaveFunction.cpp  ReadVASPWaveFunction.h  ReadVASPxmlFile.cpp  ReadVASPxmlFile.h  ResourceHandler.cpp  ResourceHandler.h  VASPInterface.cpp  VASPInterface.h  WriteVASPRealSpaceData.cpp  WriteVASPRealSpaceData.h  (+2 more)
elephon/LatticeStructure/: Atom.cpp  Atom.h  AtomDisplacement.cpp  AtomDisplacement.h  AtomDisplacementCollection.cpp  AtomDisplacementCollection.h  AtomSymmetryConnection.cpp  AtomSymmetryConnection.h  DataRegularAndRadialGrid.h  DataRegularAndRadialGrid.hpp  DataRegularGrid.h  DataRegularGrid.hpp  ExtendedSymmetricGrid.cpp  ExtendedSymmetricGrid.h  LatticeModule.cpp  LatticeModule.h  PrimitiveToSupercellConnection.cpp  PrimitiveToSupercellConnection.h  RegularBareGrid.cpp  RegularBareGrid.h  RegularGrid.cpp  RegularGrid.h  RegularSymmetricGrid.cpp  RegularSymmetricGrid.h  Symmetry.cpp  Symmetry.h  Symmetry.hpp  SymmetryReduction.h  SymmetryReduction.hpp  TetrahedraGrid.cpp  TetrahedraGrid.h  Tetrahedron.cpp  Tetrahedron.h  UnitCell.cpp  UnitCell.h
elephon/PhononStructure/: AlphaSquaredF.cpp  AlphaSquaredF.h  DisplacementPotential.cpp  DisplacementPotential.h  ElePhonMatModSquare.cpp  ElePhonMatModSquare.h  ElectronPhononCoupling.cpp  ElectronPhononCoupling.h  ElectronPhononCouplingGrid.cpp  ElectronPhononCouplingGrid.h  ForceConstantMatrix.cpp  ForceConstantMatrix.h  Forces.cpp  Forces.h  Phonon.cpp  Phonon.h  PhononGrid.cpp  PhononGrid.h  PotentialChangeIrredDisplacement.cpp  PotentialChangeIrredDisplacement.h  SymmetryPhonon.cpp  SymmetryPhonon.h
elephon/symmetry/: SymmetryOperation.cpp  SymmetryOperation.h  SymmetryOperation.hpp  atom_transform_map.cpp  atom_transform_map.h
examples/: README  run_elephon.sh
examples/vasp/: .gitignore
physics_documentation/: elephon.lyx
test/: test_main.cpp
test/Algorithms/: test_CubeSplineInterpolation.cpp  test_FFTInterface.cpp  test_LinearAlgebraInterface.cpp  test_LocalDerivative.cpp  test_SphereIntegrator.cpp  test_TrilinearInterpolation.cpp  test_helperfunctions.cpp  test_rotation_matrix_connecting_unit_vectors.cpp
test/AtomicSite/: test_AtomicSite.cpp  test_EulerAngles.cpp  test_FrozenCore.cpp  test_SphericalHarmonicExpansion.cpp  test_WignerDMatrix.cpp
test/Auxillary/: test_CubicPolynomial.cpp
test/ElectronicStructure/: test_BandOrderAnalysis.cpp  test_BandStructureAnalysis.cpp  test_ElectronicBands.cpp  test_FermiSurface.cpp  (+5 more)
(+120 files in other folders)
